can-socket/tests/compile-fail/base_can_id_too_high.rs
fn main() {
	let id = can_socket::base_id!(0x800);
	println!("{id:?}");
}
